--- a/circle.yml
+++ b/circle.yml
@@ -5,8 +5,8 @@ deployment:
     commands: 
       - "go get github.com/mitchellh/gox"
       - "go get github.com/tcnksm/ghr"
-      - "BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')"
-      - "BUILD_VERSION=$(git describe --tags)"
+      - "export BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')"
+      - "export BUILD_VERSION=$(git describe --tags)"
       - "gox -ldflags \"-X main.Version $BUILD_VERSION -X main.BuildDate $BUILD_DATE\" -output \"dist/ncd_{{.OS}}_{{.Arch}}\""
       - "ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/"
 
