--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,6 @@ deployment:
       - "go get github.com/tcnksm/ghr"
       - "export BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')"
       - "export BUILD_VERSION=$(git describe --tags)"
-      - "gox -osarch=\"linux/amd64\" -ldflags \"-X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE\" -output \"dist/consulator_$BUILD_VERSION_{{.OS}}{{.Arch}}\""
+      - "gox -osarch=\"linux/amd64\" -ldflags \"-X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE\" -output \"dist/consulator_${BUILD_VERSION}_{{.OS}}_{{.Arch}}\""
       - "ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/"
 
