--- a/circle.yml
+++ b/circle.yml
@@ -3,10 +3,13 @@ deployment:
   release:
     branch: master
     commands: 
+      - "wget http://www.musl-libc.org/releases/musl-1.1.10.tar.gz && tar -xvf musl-1.1.10.tar.gz"
+      - "cd musl-1.1.10 && ./configure && make && make install"
       - "go get github.com/mitchellh/gox"
       - "go get github.com/tcnksm/ghr"
       - "export BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')"
       - "export BUILD_VERSION=$(git describe --tags)"
-      - "gox -osarch=\"linux/amd64\" -ldflags \"-X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE\" -output \"dist/consulator_${BUILD_VERSION}_{{.OS}}_{{.Arch}}\""
+      - "export CC=/usr/local/musl/bin/musl-gcc"
+      - "gox -osarch=\"linux/amd64\" -ldflags \"-linkmode external -extldflags '-static' -X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE\" -output \"dist/consulator_${BUILD_VERSION}_{{.OS}}_{{.Arch}}\""
       - "ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/"
 
