sudo make install for build

--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ deployment:
     branch: master
     commands: 
       - "wget http://www.musl-libc.org/releases/musl-1.1.16.tar.gz && tar -xvf musl-1.1.16.tar.gz"
-      - "cd musl-1.1.16 && ./configure && make && make install"
+      - "cd musl-1.1.16 && ./configure && make && sudo make install"
       - "go get github.com/mitchellh/gox"
       - "go get github.com/tcnksm/ghr"
       - "export BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')"
