--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,12 @@
 --- 
 deployment: 
   release:
-    branch: master
+    tag: .*
     commands: 
       - "wget http://www.musl-libc.org/releases/musl-1.1.16.tar.gz && tar -xvf musl-1.1.16.tar.gz"
       - "cd musl-1.1.16 && ./configure && make && sudo make install"
       - "go get github.com/mitchellh/gox"
       - "go get github.com/tcnksm/ghr"
-      - "export BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')"
-      - "export BUILD_VERSION=$(git describe --tags)"
-      - "export CC=/usr/local/musl/bin/musl-gcc"
-      - "gox -osarch=\"linux/amd64\" -ldflags \"-linkmode external -extldflags '-static' -X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE\" -output \"dist/consulator_${BUILD_VERSION}_{{.OS}}_{{.Arch}}\""
+      - "BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S') BUILD_VERSION=$(git describe --tags) CC=/usr/local/musl/bin/musl-gcc gox -osarch=\"linux/amd64\" -ldflags \"-linkmode external -extldflags '-static' -X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE\" -output \"dist/consulator_${BUILD_VERSION}_{{.OS}}_{{.Arch}}\""
       - "ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/"
 
