--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 --- 
 deployment: 
   release:
-    tag: .*
+    tag: /.*/
     commands: 
       - "wget http://www.musl-libc.org/releases/musl-1.1.16.tar.gz && tar -xvf musl-1.1.16.tar.gz"
       - "cd musl-1.1.16 && ./configure && make && sudo make install"
