enable more codecliamte engines

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,14 @@
 engines:
   fixme:
     enabled: true
+  golint:
+    enabled: true
+  govet:
+    enabled: true
+  gofmt:
+    enabled: true
 ratings:
-  paths: []
+  paths:
+    - "**.go"
 exclude_paths:
   - test/
